--- a/assets/styles/sass/projects-layout.scss
+++ b/assets/styles/sass/projects-layout.scss
@@ -30,14 +30,14 @@
 #screenshot-carousel {
   border: 1px $underline-color dotted;
   width: 99%;
-  height: 320px;
-  overflow: scroll;
-  overflow-y: hidden;
+  height: 350px;
+  overflow-x: scroll;
+  overflow-y: hidden !important;
   -webkit-overflow-scrolling: touch;
   white-space: nowrap;
 
   .screenshot {
-     margin-top: 20px;
+    padding-top: 20px;
      margin-right: 20px;
      height: 300px;
      display: inline-block;
